# AletheIA_api

./: .env.example  .gitignore  AletheiaEngine.py  Dockerfile  README.md  app.py  docker-compose.yml  init.sql  main.py  pyproject.toml
app/: config.py  main.py
app/Repositories/: embedding_repo.py
app/api/v1/endpoints/: embedding.py  health.py
app/core/: queue.py
app/db/: models.py  session.py
models/: document_classifier.onnx
worker/: AletheiaEngine.py  debug.py  worker.py
