[project]
name = "aletheia-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.128.0",
  "inspireface>=1.2.3.post5",
  "numpy>=2.4.0",
  "onnxruntime>=1.23.2",
  "opencv-python-headless>=4.11.0.86",
  "pgvector>=0.4.2",
  "sqlalchemy>=2.0.45",
]
